checkstyle typo fixed